--- a/Contributors.html
+++ b/Contributors.html
@@ -372,7 +372,8 @@
      <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
     <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
     <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
-      <a class="box-item" href="https://github.com/anilectjose"><span>Anilect Jose</span></a>
+    <a class="box-item" href="https://github.com/anilectjose"><span>Anilect Jose</span></a>
+    <a class="box-item" href="https://github.com/Smriti129"><span>Smriti Srivastava</span></a>
 
 
       <!-- Please maintain the alignment... -->
