--- a/Program's_Contributed_By_Contributors/Python_Programs/Contributors.html
+++ b/Program's_Contributed_By_Contributors/Python_Programs/Contributors.html
@@ -375,6 +375,7 @@
       <a class="box-item" href="https://github.com/napster-ansh"><span>Ansh Jain</span></a>
       <a class="box-item" href="https://github.com/YASH4801"><span>Yash Narang</span></a>
       <a class="box-item" href="https://github.com/santosh50"><span>Santosh Vasisht</span></a>
+        <a class="box-item" href="https://github.com/erwindwii"><span>Erwin Dwi Susanto</span></a>
 
 
           <!-- Please maintain the alignment... -->
