Updating Contributers.html

--- a/Contributors.html
+++ b/Contributors.html
@@ -373,6 +373,8 @@
     <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
     <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
       <a class="box-item" href="https://github.com/anilectjose"><span>Anilect Jose</span></a>
+      <a class="box-item" href="https://github.com/sumushi"><span>Sumaiya Fatma</span></a>
+
 
 
       <!-- Please maintain the alignment... -->
