--- a/Contributors.html
+++ b/Contributors.html
@@ -373,6 +373,7 @@
     <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
     <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
       <a class="box-item" href="https://github.com/anilectjose"><span>Anilect Jose</span></a>
+      <a class="box-item" href="https://github.com/Vaibhavwani11"><span>Vaibhav Wani</span></a>
 
 
       <!-- Please maintain the alignment... -->
