--- a/Contributors.html
+++ b/Contributors.html
@@ -376,6 +376,7 @@
     <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
       <a class="box-item" href="https://github.com/anilectjose"><span>Anilect Jose</span></a>
         <a class="box-item" href="https://github.com/jyoti88"><span>Jyoti88</span></a>
+      <a class="box-item" href="https://github.com/souvik0306"><span>Souvik Datta</span></a>
 
       <!-- Please maintain the alignment... -->
 
