--- a/Contributors.html
+++ b/Contributors.html
@@ -368,6 +368,7 @@
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
       <a class="box-item" href="https://github.com/gulshanjakhon"><span>Gulshan Jakhon</span></a>
       <a class="box-item" href="https://github.com/code08-ind"><span>Aryan Garg</span></a>
+      <a class="box-item" href="https://github.com/mariabarkouzou"><span>Maria Barkouzou</span></a>
 
 
 
