--- a/Contributors.html
+++ b/Contributors.html
@@ -127,6 +127,7 @@
 
 
       <!-- Add to the bottom of the list -->
+      <a class="box-item" href="https://github.com/venkateshtantravahi"><span>Venkatesh Tantravahi</span></a>
       <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
       <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
       <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
