--- a/Contributors.html
+++ b/Contributors.html
@@ -383,6 +383,8 @@
       <a class="box-item" href="https://github.com/code08-ind"><span>Aryan Garg</span></a>
       <a class="box-item" href="https://github.com/mariabarkouzou"><span>Maria Barkouzou</span></a>
         <a class="box-item" href="https://github.com/andrianfaa"><span>Andrian Fadhilla</span></a>
+        <a class="box-item" href="https://github.com/sarasana"><span>Sara</span></a>
+        
 
 
 
