--- a/Contributors.html
+++ b/Contributors.html
@@ -54,7 +54,7 @@
 
 
   <!-- Back-to-top Button -->
-  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-2x fa-arrow-up"></i></button>
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-angle-double-up"></i></button>
   <button id="back-to-top-btn"><i class="fas fa-angle-double-up"></i></button>
 
 
@@ -111,42 +111,22 @@
 
       <!-- Add to the bottom of the list -->
       <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
-      <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
-      <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
-      <a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
-      <a class="box-item" href="https://github.com/shradha-khapra"><span>Shradha Khapra</span></a>
-      <a class="box-item" href="https://github.com/dwikychandra21"><span>Dwiky Chandra</span></a>
-      <a class="box-item" href="https://github.com/ritesh2905"><span>Ritesh Kumar</span></a>
       <a class="box-item" href="https://github.com/xevenheaven"><span>Elysia Ong</span></a>
       <a class="box-item" href="https://github.com/facundof13"><span>Facundo</span></a>
       <a class="box-item" href="https://github.com/Aashik96"><span>Aashik Ahamed</span></a>
       <a class="box-item" href="https://github.com/Hrishabh5"><span>Hrishabh Jain</span></a>
-      <a class="box-item" href="https://github.com/alok2947"><span>Alok Kumar Jha</span></a>
-      <a class="box-item" href="https://github.com/zonex909"><span>Rupna Maitra</span></a>
       <a class="box-item" href="https://github.com/skully-coder"><span>Abhinav Agarwal</span></a>
       <a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
       <a class="box-item" href="https://github.com/dwiguna81"><span>Dwi Guna</span></a>
+      <a class="box-item" href="https://github.com/alok2947"><span>Alok Kumar Jha</span></a>
       <a class="box-item" href="https://github.com/Rajat-sharMaa"><span>Rajat Shamraa</span></a>
       <a class="box-item" href="https://github.com/Samarth-Khatri"><span>Samarth Khatri</span></a>
-      <a class="box-item" href="https://github.com/20manas"><span>Manas Khurana</span></a>
-      <a class="box-item" href="https://github.com/manigedit"><span>Manish Kumar</span></a>
-      <a class="box-item" href="https://github.com/vakilsahabh"><span>Vakeel Sahabh</span></a>
       <a class="box-item" href="https://github.com/randymfournier"><span>Randy M Fournier</span></a>
-      <a class="box-item" href="https://github.com/ruchirtoshniwal"><span>Ruchir Toshniwal</span></a>
       <a class="box-item" href="https://github.com/juniorhero"><span>Athul Jayaram</span></a>
       <a class="box-item" href="https://github.com/nnishad"><span>Nikhil Nishad</span></a>
       <a class="box-item" href="https://github.com/ShagiG"><span>ShagiGanesh</span></a>
       <a class="box-item" href="https://github.com/hidalgob"><span>Bruno Hidalgo</span></a>
-      <a class="box-item" href="https://github.com/cee-elle"><span>Cindy Le</span></a>
-      <a class="box-item" href="https://github.com/Starfire1853"><span>Lynn Nguyen</span></a>
       <a class="box-item" href="https://github.com/dimitrisz123"><span>Jim Zervas</span></a>
-      <a class="box-item" href="https://github.com/proghead00"><span>Susnata Goswami</span></a>
-      <a class="box-item" href="https://github.com/gayathribuddhika"><span>Gayathri Buddhika</span></a>
-      <a class="box-item" href="https://github.com/Triben-Choudhary"><span>Triben Choudhary</span></a>
-      <a class="box-item" href="https://github.com/rajneeshk94"><span>Rajneesh Khare</span></a>
-      <a class="box-item" href="https://github.com/milos5593"><span>Milos Vujinic</span></a>
-      <a class="box-item" href="https://github.com/senshiii"><span>Sayan Das</span></a>
-      <a class="box-item" href="https://github.com/Shagufta08"><span>Shagufta Iqbal</span></a>
       <a class="box-item" href="https://github.com/ishgary"><span>Ishant Garg</span></a>
       <a class="box-item" href="https://github.com/naman74"><span>Naman</span></a>
       <a class="box-item" href="https://github.com/Sauvic016"><span>Sauvic P Choudhury </span></a>
@@ -215,6 +195,14 @@
       <a class="box-item" href="https://github.com/osamakhan552"><span>Osama Khan</span></a>
       <a class="box-item" href="https://github.com/ShreyaChopra13"><span>Shreya Chopra</span></a>
       <a class="box-item" href="https://github.com/dynle"><span>Dynle</span></a>
+      <a class="box-item" href="https://github.com/20manas"><span>Manas Khurana</span></a>
+      <a class="box-item" href="https://github.com/manigedit"><span>Manish Kumar</span></a>
+      <a class="box-item" href="https://github.com/Triben-Choudhary"><span>Triben Choudhary</span></a>
+      <a class="box-item" href="https://github.com/Starfire1853"><span>Lynn Nguyen</span></a>
+      <a class="box-item" href="https://github.com/vakilsahabh"><span>Vakeel Sahabh</span></a>
+      <a class="box-item" href="https://github.com/ruchirtoshniwal"><span>Ruchir Toshniwal</span></a>
+      <a class="box-item" href="https://github.com/cee-elle"><span>Cindy Le</span></a>
+      <a class="box-item" href="https://github.com/zonex909"><span>Rupna Maitra</span></a>
       <a class="box-item" href="https://github.com/Krutarth06"><span>Krutarth Trivedi</span></a>
       <a class="box-item" href="https://github.com/Lukman350"><span>Lukman</span></a>
       <a class="box-item" href="https://github.com/ShreyaChopra13"><span>Shreya </span></a>
@@ -227,6 +215,7 @@
       <a class="box-item" href="https://github.com/matheusdaluz"><span>Matheus da Luz</span></a>
       <a class="box-item" href="https://github.com/cheetosmaster"><span>cheetosmaster</span></a>
       <a class="box-item" href="https://github.com/ramadh-an"><span>Nukholis Ramadhan</span></a>
+      <a class="box-item" href="https://github.com/suyash0102"><span>Suyash Dahake</span></a>
       <a class="box-item" href="https://github.com/OmanshArora"><span>Omansh</span></a>
       <a class="box-item" href="https://github.com/ialexanderbrito"><span>Alexander</span></a>
       <a class="box-item" href="https://github.com/rishabhrathore055"><span>Rishabh Rathore</span></a>
@@ -301,14 +290,17 @@
       <a class="box-item" href="https://github.com/arunim-iiitlCS"><span>Arunim Singhal</span></a>
       <a class="box-item" href="https://github.com/ahad-abd"><span>Abdul Ahad</span></a>
       <a class="box-item" href="https://github.com/MFR414"><span>M Firmansyah Rifai</span></a>
-      <a class="box-item" href="https://github.com/AdityaSawant21"><span>Aditya Sawant</span></a>
-      <a class="box-item" href="https://github.com/kevadamar"><span>Keva Damar Galih</span></a>
       <a class="box-item" href="https://github.com/a-ayush19"><span>Ayush Awasthi</span></a>
-      <a class="box-item" href="https://github.com/SamarthSawhney"><span>Samarth Sawhney</span></a>
       <a class="box-item" href="https://github.com/highflyer910"><span>Thea M.</span></a>
       <a class="box-item" href="https://github.com/alfaniM"><span>M. Aulia Alfani</span></a>
       <a class="box-item" href="https://github.com/soumyajit1999"><span>Soumyajit Sen</span></a>
       <a class="box-item" href="https://github.com/vishnuramv"><span>Vishnu Ram V</span></a>
+      <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
+      <a class="box-item" href="https://github.com/SayantanMaiti"><span>Sayantan Maiti</span></a>
+      <a class="box-item" href="https://github.com/napster-ansh"><span>Ansh Jain</span></a>
+      <a class="box-item" href="https://github.com/s0v13tl3m0n"><span>s0v13tl3m0n</span></a>
+      <a class="box-item" href="https://github.com/smriti2411"><span>Smriti Gupta</span></a>
+      <a class="box-item" href="https://github.com/davidtheweiss"><span>David Weiss</span></a>
       <a class="box-item" href="https://github.com/nyctonio"><span>Ritesh Kumar</span></a>
       <a class="box-item" href="https://github.com/geeky01adarsh"><span>Adarsh Navneet Sinha</span></a>
       <a class="box-item" href="https://github.com/RAJASETHI"><span>Raja Sethi</span></a>
@@ -351,12 +343,41 @@
       <a class="box-item" href="https://github.com/H-M-Noman123"><span>H-M-Noman123</span></a>
       <a class="box-item" href="https://github.com/barunipriyats"><span>Baruni Priya T S</span></a>
       <a class="box-item" href="https://github.com/anmolg84"><span>Anmol Gupta</span></a>
-      <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
-      <a class="box-item" href="https://github.com/SayantanMaiti"><span>Sayantan Maiti</span></a>
+      <a class="box-item" href="https://github.com/gulshanjakhon"><span>Gulshan Jakhon</span></a>
+      <a class="box-item" href="https://github.com/Sonalanand102"><span>Sonal Anand</span></a>
+      <a class="box-item" href="https://github.com/HarineM"><span>Harine Murugan</span></a>
+      <a class="box-item" href="https://github.com/diwuracreatives"><span>Diwura Creatives</span></a>
       <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
-      <a class="box-item" href="https://github.com/napster-ansh"><span>Ansh Jain</span></a>
-      <a class="box-item" href="https://github.com/smriti2411"><span>Smriti Gupta</span></a>
-
+      <a class="box-item" href="https://github.com/vaishali8799"><span>Vaishali Kasondhan</span></a>
+      <a class="box-item" href="https://github.com/Tripti19-Rao"><span>Tripti</span></a>
+      <a class="box-item" href="https://github.com/nimishph"><span>Nimish Ph</span></a>
+      <a class="box-item" href="https://github.com/code08-ind"><span>Aryan Garg</span></a>
+      <a class="box-item" href="https://github.com/mariabarkouzou"><span>Maria Barkouzou</span></a>
+      <a class="box-item" href="https://github.com/andrianfaa"><span>Andrian Fadhilla</span></a>
+      <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
+      <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
+      <a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
+      <a class="box-item" href="https://github.com/Mridul2820"><span>Mridul Panda</span></a>
+      <a class="box-item" href="https://github.com/shradha-khapra"><span>Shradha Khapra</span></a>
+      <a class="box-item" href="https://github.com/dwikychandra21"><span>Dwiky Chandra</span></a>
+      <a class="box-item" href="https://github.com/ritesh2905"><span>Ritesh Kumar</span></a>
+      <a class="box-item" href="https://github.com/proghead00"><span>Susnata Goswami</span></a>
+      <a class="box-item" href="https://github.com/gayathribuddhika"><span>Gayathri Buddhika</span></a>
+      <a class="box-item" href="https://github.com/rajneeshk94"><span>Rajneesh Khare</span></a>
+      <a class="box-item" href="https://github.com/rashmi-thakurr"><span>Rashmi Thakur</span></a>
+      <a class="box-item" href="https://github.com/milos5593"><span>Milos Vujinic</span></a>
+      <a class="box-item" href="https://github.com/senshiii"><span>Sayan Das</span></a>
+      <a class="box-item" href="https://github.com/Shagufta08"><span>Shagufta Iqbal</span></a>
+      <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
+      <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
+      <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
+      <a class="box-item" href="https://github.com/anilectjose"><span>Anilect Jose</span></a>
+      <a class="box-item" href="https://github.com/jyoti88"><span>Jyoti88</span></a>
+      <a class="box-item" href="https://github.com/ankitkumar5358"><span>Ankit Kumar</span></a>
+      <a class="box-item" href="https://github.com/GraniteMask"><span>Ratnadeep Das Choudhury</span></a>
+      <a class="box-item" href="https://github.com/Vaibhavwani11"><span>Vaibhav Wani</span></a>
+      <a class="box-item" href="https://github.com/Smriti129"><span>Smriti Srivastava</span></a>
+      <a class="box-item" href="https://github.com/venkateshtantravahi"><span>Venkatesh Tantravahi</span></a>
 
 
       <!-- Please maintain the alignment... -->
