--- a/Contributors.html
+++ b/Contributors.html
@@ -127,6 +127,12 @@
       <!-- Add to the bottom of the list -->
 
       <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
+      <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
+      <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
+      <a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
+      <a class="box-item" href="https://github.com/shradha-khapra"><span>Shradha Khapra</span></a>
+      <a class="box-item" href="https://github.com/dwikychandra21"><span>Dwiky Chandra</span></a>
+      <a class="box-item" href="https://github.com/ritesh2905"><span>Ritesh Kumar</span></a>
       <a class="box-item" href="https://github.com/xevenheaven"><span>Elysia Ong</span></a>
       <a class="box-item" href="https://github.com/facundof13"><span>Facundo</span></a>
       <a class="box-item" href="https://github.com/Aashik96"><span>Aashik Ahamed</span></a>
