--- a/Contributors.html
+++ b/Contributors.html
@@ -162,6 +162,7 @@
       <a class="box-item" href="https://github.com/aman339"><span>Aman Kumar Choudhary</span></a>
       <a class="box-item" href="https://github.com/DataCrusade1999"><span>Ashutosh Pandey</span></a>
       <a class="box-item" href="https://github.com/zomsik"><span>Tomasz Wiejak</span></a>
+      <a class="box-item" href="https://github.com/zomsik"><span>Gautham Sritharan</span></a>
       <a class="box-item" href="https://github.com/elijahdaniel"><span>Elijah Paminsan</span></a>
       <a class="box-item" href="https://github.com/evergreen2001"><span>Ido Evergreen</span></a>
       <a class="box-item" href="https://github.com/Zaheudev"><span>Zaharia Iulian</span></a>
