--- a/Contributors.html
+++ b/Contributors.html
@@ -398,6 +398,7 @@
       <a class="box-item" href="https://github.com/tmttan03"><span>Theressa</span></a>
       <a class="box-item" href="https://github.com/Summer-source"><span>Naushad Alam</span></a>
       <a class="box-item" href="https://github.com/GoGi2712"><span>Ankita Mandal</span></a>
+      <a class="box-item" href="https://github.com/NIRMAL122"><span>Nirmal Singh</span></a>
 
 
     
