Added a 404 Page created using HTML and Plain CSS

--- a/Contributors.html
+++ b/Contributors.html
@@ -401,8 +401,7 @@
       <a class="box-item" href="https://github.com/GoGi2712"><span>Ankita Mandal</span></a>
       <a class="box-item" href="https://github.com/sathish-saminathan"><span>Sathish kumar Saminathan</span></a>
       <a class="box-item" href="https://github.com/NIRMAL122"><span>Nirmal Singh</span></a>
-
-
+      <a class="box-item" href="https://github.com/Saurav017"><span>Saurav Purohit</span></a>
 
     
     
