Added Java based Programs

--- a/Contributors.html
+++ b/Contributors.html
@@ -148,6 +148,7 @@
       <a class="box-item" href="https://github.com/nnishad"><span>Nikhil Nishad</span></a>
       <a class="box-item" href="https://github.com/ShagiG"><span>ShagiGanesh</span></a>
       <a class="box-item" href="https://github.com/hidalgob"><span>Bruno Hidalgo</span></a>
+      <a class="box-item" href="https://github.com/punitsakre23"><span>Punit Sakre</span></a>
       <a class="box-item" href="https://github.com/dimitrisz123"><span>Jim Zervas</span></a>
       <a class="box-item" href="https://github.com/ishgary"><span>Ishant Garg</span></a>
       <a class="box-item" href="https://github.com/naman74"><span>Naman</span></a>
