--- a/Contributors.html
+++ b/Contributors.html
@@ -402,6 +402,7 @@
       <a class="box-item" href="https://github.com/sathish-saminathan"><span>Sathish kumar Saminathan</span></a>
       <a class="box-item" href="https://github.com/NIRMAL122"><span>Nirmal Singh</span></a>
       <a class="box-item" href="https://github.com/caspero-62"><span>Uchechukwu Nwafor</span></a>
+      <a class="box-item" href="https://github.com/caspero-62"><span>Ruben Kharel</span></a>
 
 
 
