--- a/Contributors.html
+++ b/Contributors.html
@@ -415,6 +415,7 @@
     <a class="box-item" href="https://github.com/mritunjay7065"><span>Mritunjay Kumar</span></a>
      <a class="box-item" href="https://github.com/praveenbhardwaj"><span>Praveen Bhardwaj</span></a>
     <a class="box-item" href="https://github.com/caspero-62"><span>Ruben Kharel</span></a>
+      <a class="box-item" href="https://github.com/ianc1234"><span>Ian Cao</span></a>
 
 
 
