--- a/Contributors.html
+++ b/Contributors.html
@@ -410,12 +410,12 @@
       <a class="box-item" href="https://github.com/NIRMAL122"><span>Nirmal Singh</span></a>
       <a class="box-item" href="https://github.com/caspero-62"><span>Uchechukwu Nwafor</span></a>
       <a class="box-item" href="https://github.com/YogishaNiraula"><span>Yogisha Niraula</span></a>
-    <a class="box-item" href="https://github.com/Saurav017"><span>Saurav Purohit</span></a>
-     <a class="box-item" href="https://github.com/JuktaGoyari"><span>Jukta Goyari</span></a>
-    <a class="box-item" href="https://github.com/mritunjay7065"><span>Mritunjay Kumar</span></a>
-     <a class="box-item" href="https://github.com/praveenbhardwaj"><span>Praveen Bhardwaj</span></a>
-    <a class="box-item" href="https://github.com/caspero-62"><span>Ruben Kharel</span></a>
-
+      <a class="box-item" href="https://github.com/Saurav017"><span>Saurav Purohit</span></a>
+      <a class="box-item" href="https://github.com/JuktaGoyari"><span>Jukta Goyari</span></a>
+      <a class="box-item" href="https://github.com/mritunjay7065"><span>Mritunjay Kumar</span></a>
+      <a class="box-item" href="https://github.com/praveenbhardwaj"><span>Praveen Bhardwaj</span></a>
+      <a class="box-item" href="https://github.com/caspero-62"><span>Ruben Kharel</span></a>
+      <a class="box-item" href="https://github.com/sandwichleham"><span>Finn Haggen</span></a>
 
 
 
