--- a/Contributors.html
+++ b/Contributors.html
@@ -410,19 +410,20 @@
       <a class="box-item" href="https://github.com/NIRMAL122"><span>Nirmal Singh</span></a>
       <a class="box-item" href="https://github.com/caspero-62"><span>Uchechukwu Nwafor</span></a>
       <a class="box-item" href="https://github.com/YogishaNiraula"><span>Yogisha Niraula</span></a>
-    <a class="box-item" href="https://github.com/Saurav017"><span>Saurav Purohit</span></a>
-     <a class="box-item" href="https://github.com/JuktaGoyari"><span>Jukta Goyari</span></a>
-    <a class="box-item" href="https://github.com/mritunjay7065"><span>Mritunjay Kumar</span></a>
-     <a class="box-item" href="https://github.com/praveenbhardwaj"><span>Praveen Bhardwaj</span></a>
-    <a class="box-item" href="https://github.com/caspero-62"><span>Ruben Kharel</span></a>
+      <a class="box-item" href="https://github.com/Saurav017"><span>Saurav Purohit</span></a>
+      <a class="box-item" href="https://github.com/JuktaGoyari"><span>Jukta Goyari</span></a>
+      <a class="box-item" href="https://github.com/mritunjay7065"><span>Mritunjay Kumar</span></a>
+      <a class="box-item" href="https://github.com/praveenbhardwaj"><span>Praveen Bhardwaj</span></a>
+      <a class="box-item" href="https://github.com/caspero-62"><span>Ruben Kharel</span></a>
       <a class="box-item" href="https://github.com/ianc1234"><span>Ian Cao</span></a>
-     <a class="box-item" href="https://github.com/sandwichleham"><span>Finn Haggen</span></a>
-     <a class="box-item" href="https://github.com/jyoti88"><span>Jyoti88</span></a>
+      <a class="box-item" href="https://github.com/sandwichleham"><span>Finn Haggen</span></a>
+      <a class="box-item" href="https://github.com/jyoti88"><span>Jyoti88</span></a>
       <a class="box-item" href="https://github.com/bowo-anakdesa"><span>Sumitro Aji Prabowo</span></a>
-    <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
+      <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
       <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
       <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
       <a class="box-item" href="https://github.com/tallCoder02"><span>Emmanuel C. Jemeni</span></a>
+      <a class="box-item" href="https://github.com/FathRa"><span>Fath Ra</span></a>
 
 
 
