--- a/Contributors.html
+++ b/Contributors.html
@@ -258,6 +258,7 @@
       <a class="box-item" href="https://github.com/aaq007"><span>Aaqil Shihab</span></a>
       <a class="box-item" href="https://github.com/todoroki07"><span>Rufus</span></a>
       <a class="box-item" href="https://github.com/shinigamiii07"><span>Trideep</span></a>
+      <a class="box-item" href="https://github.com/luisvillalba"><span>Luis Villalba</span></a>
       <a class="box-item" href="https://github.com/vishalhacker"><span>vishal hacker</span></a>
       <a class="box-item" href="https://github.com/Brougud"><span>Monke</span></a>
       <a class="box-item" href="https://github.com/adityakumar48"><span>Visinigiri Aditya</span></a>
