Add OG metadata to contributors

--- a/Contributors.html
+++ b/Contributors.html
@@ -24,6 +24,11 @@
 
   <meta name="description"
     content="This is a static website serving as a beginner friendly project to help developers get started with hacktoberfest -Gateway to open source.">
+  <meta property="og:description" content="This is a static website serving as a beginner friendly project to help developers get started with hacktoberfest -Gateway to open source.">
+  <meta property="og:locale" content="en">
+  <meta property="og:site_name" content="Hacktoberfest 2021">
+  <meta property="og:title" content="Hacktoberfest 2021 - Contributors">
+  <meta property="og:type" content="website">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <!-- jQuery library -->
