--- a/Contributors.html
+++ b/Contributors.html
@@ -16,8 +16,8 @@
   <meta http-equiv="Expires" content="0">
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
   <meta http-equiv="Expires" content="0">
-   <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -379,7 +379,6 @@
       <a class="box-item" href="https://github.com/diwuracreatives"><span>Diwura Creatives</span></a>
       <a class="box-item" href="https://github.com/Vishvesh-Codehunt"><span>Vishvesh Patel</span></a>
       <a class="box-item" href="https://github.com/vaishali8799"><span>Vaishali Kasondhan</span></a>
-
       <a class="box-item" href="https://github.com/Tripti19-Rao"><span>Tripti</span></a>
       <a class="box-item" href="https://github.com/nimishph"><span>Nimish Ph</span></a>
       <a class="box-item" href="https://github.com/code08-ind"><span>Aryan Garg</span></a>
@@ -427,14 +426,15 @@
       <a class="box-item" href="https://github.com/exist08"><span>ANURAG SINGH</span></a>
       <a class="box-item" href="https://github.com/AishwaryaHombalimath"><span>Aishwarya Hombalimath</span></a>
       <a class="box-item" href="https://github.com/FathRa"><span>Fath Ra</span></a>
-     <a class="box-item" href="https://github.com/whoisraa"><span>whoisraa</span></a>
-     <a class="box-item" href="https://github.com/floating-dynamo"><span>Sridhar Maskeri</span></a>
-     <a class="box-item" href="https://github.com/rud26dev"><span>Rudraksha Bhattacharjee</span></a>
-<a class="box-item" href="https://github.com/sumushi"><span>Sumaiya Fatma</span></a>
-   <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
-    <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
-    <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
-    <a class="box-item" href="https://github.com/Rishu1018"><span>Gustavo Rishu Yadav</span></a>
+      <a class="box-item" href="https://github.com/whoisraa"><span>whoisraa</span></a>
+      <a class="box-item" href="https://github.com/floating-dynamo"><span>Sridhar Maskeri</span></a>
+      <a class="box-item" href="https://github.com/rud26dev"><span>Rudraksha Bhattacharjee</span></a>
+      <a class="box-item" href="https://github.com/sumushi"><span>Sumaiya Fatma</span></a>
+      <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
+      <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
+      <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
+      <a class="box-item" href="https://github.com/Rishu1018"><span>Gustavo Rishu Yadav</span></a>
+      <a class="box-item" href="https://github.com/HrHasnai"><span>Hasnain Rasheed</span></a>
 
 
       <!-- Please maintain the alignment... -->
