--- a/Contributors.html
+++ b/Contributors.html
@@ -435,6 +435,7 @@
     <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
     <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
     <a class="box-item" href="https://github.com/Rishu1018"><span>Gustavo Rishu Yadav</span></a>
+    <a class="box-item" href="https://github.com/Kizito007"><span>Nwaka Kizito</span></a>
 
 
       <!-- Please maintain the alignment... -->
