--- a/Contributors.html
+++ b/Contributors.html
@@ -435,6 +435,8 @@
     <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
     <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
     <a class="box-item" href="https://github.com/Rishu1018"><span>Gustavo Rishu Yadav</span></a>
+      <a class="box-item" href="https://github.com/Aashutosh-922"><span>Aashutosh Karale</span></a>
+
 
 
       <!-- Please maintain the alignment... -->
