--- a/Contributors.html
+++ b/Contributors.html
@@ -424,7 +424,7 @@
       <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
       <a class="box-item" href="https://github.com/tallCoder02"><span>Emmanuel C. Jemeni</span></a>
       <a class="box-item" href="https://github.com/AishwaryaHombalimath"><span>Aishwarya Hombalimath</span></a>
-
+      <a class="box-item" href="https://github.com/real-phoenix"><span>Shreya Singh</span></a>
 
 
 
