--- a/Contributors.html
+++ b/Contributors.html
@@ -402,6 +402,7 @@
       <a class="box-item" href="https://github.com/Vaibhavwani11"><span>Vaibhav Wani</span></a>
       <a class="box-item" href="https://github.com/Smriti129"><span>Smriti Srivastava</span></a>
       <a class="box-item" href="https://github.com/venkateshtantravahi"><span>Venkatesh Tantravahi</span></a>
+      <a class="box-item" href="https://github.com/Saumya9425"><span>Saumya Chaudhary</span></a>
       <a class="box-item" href="https://github.com/sarasana"><span>Sara</span></a>
       <a class="box-item" href="https://github.com/mctraore"><span>MC</span></a>
       <a class="box-item" href="https://github.com/tmttan03"><span>Theressa</span></a>
