--- a/Contributors.html
+++ b/Contributors.html
@@ -427,14 +427,15 @@
       <a class="box-item" href="https://github.com/exist08"><span>ANURAG SINGH</span></a>
       <a class="box-item" href="https://github.com/AishwaryaHombalimath"><span>Aishwarya Hombalimath</span></a>
       <a class="box-item" href="https://github.com/FathRa"><span>Fath Ra</span></a>
-     <a class="box-item" href="https://github.com/whoisraa"><span>whoisraa</span></a>
-     <a class="box-item" href="https://github.com/floating-dynamo"><span>Sridhar Maskeri</span></a>
-     <a class="box-item" href="https://github.com/rud26dev"><span>Rudraksha Bhattacharjee</span></a>
-<a class="box-item" href="https://github.com/sumushi"><span>Sumaiya Fatma</span></a>
-   <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
-    <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
-    <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
-    <a class="box-item" href="https://github.com/Rishu1018"><span>Gustavo Rishu Yadav</span></a>
+      <a class="box-item" href="https://github.com/whoisraa"><span>whoisraa</span></a>
+      <a class="box-item" href="https://github.com/floating-dynamo"><span>Sridhar Maskeri</span></a>
+      <a class="box-item" href="https://github.com/rud26dev"><span>Rudraksha Bhattacharjee</span></a>
+      <a class="box-item" href="https://github.com/sumushi"><span>Sumaiya Fatma</span></a>
+      <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
+      <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
+      <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
+      <a class="box-item" href="https://github.com/Rishu1018"><span>Gustavo Rishu Yadav</span></a>
+      <a class="box-item" href="https://github.com/zackmolt"><span>Fikri Haikal</span></a>
 
 
       <!-- Please maintain the alignment... -->
