resolved Contribution.html conflict

--- a/Contributors.html
+++ b/Contributors.html
@@ -437,6 +437,7 @@
       <a class="box-item" href="https://github.com/Japoncio3k"><span>Gustavo Kamihara</span></a>
       <a class="box-item" href="https://github.com/Rishu1018"><span>Gustavo Rishu Yadav</span></a>
       <a class="box-item" href="https://github.com/ParthJohri"><span>Parth Johri</span></a>
+      <a class="box-item" href="https://github.com/zackmolt"><span>Fikri Haikal</span></a>
 
 
       <!-- Please maintain the alignment... -->
