Added a new span

--- a/Contributors.html
+++ b/Contributors.html
@@ -205,6 +205,7 @@
       <a class="box-item" href="https://github.com/rohantheprogrammer"><span>RohanTheProgrammer</span></a>
       <a class="box-item" href="https://github.com/Prasad-Chathuranga"><span>Prasad Chathuranga</span></a>
       <a class="box-item" href="https://github.com/vngarg"><span>Shlok Garg</span></a>
+      <a class="box-item" href="https://github.com/Rohit-1706"><span>Rohit Chowdhury</span></a>
       <a class="box-item" href="https://github.com/siddharthdeo99"><span>Siddharth deo</span></a>
       <a class="box-item" href="https://github.com/Aniket6039"><span>Aniket Raj</span></a>
       <a class="box-item" href="https://github.com/JayantGoel001"><span>Jayant Goel</span></a>
