--- a/Contributors.html
+++ b/Contributors.html
@@ -440,7 +440,8 @@
 
       <a class="box-item" href="https://github.com/ParthJohri"><span>Parth Johri</span></a>
       <a class="box-item" href="https://github.com/amansaini01"><span>Aman saini</span></a>
-     <a class="box-item" href="https://github.com/zackmolt"><span>Fikri Haikal</span></a>
+      <a class="box-item" href="https://github.com/zackmolt"><span>Fikri Haikal</span></a>
+      <a class="box-item" href="https://github.com/sahabatdavid"><span>Muhammad David Ismail MS</span></a>
 
 
       <!-- Please maintain the alignment... -->
