added my small project

--- a/Contributors.html
+++ b/Contributors.html
@@ -465,6 +465,7 @@
       <a class="box-item" href="https://github.com/Aashik96"><span>Aashik Ahamed</span></a>
       <a class="box-item" href="https://github.com/Rajat-sharMaa"><span>Rajat Shamraa</span></a>
       <a class="box-item" href="https://github.com/savarbhasin"><span>Savar Bhasin</span></a>
+      <a class="box-item" href="https://github.com/ganapathypy"><span>Ganapathy P T</span></a>
 
 
 
