--- a/Contributors.html
+++ b/Contributors.html
@@ -439,6 +439,7 @@
       <a class="box-item" href="https://github.com/Rajat-sharMaa"><span>Rajat Shamraa</span></a>
       <a class="box-item" href="https://github.com/savarbhasin"><span>Savar Bhasin</span></a>
       <a class="box-item" href="https://github.com/aakashjha017"><span>Aakash Jha</span></a>
+      <a class="box-item" href="https://github.com/kapil706"><span>Kapil Chaudhary</span></a>
 
 
 
