--- a/Contributors.html
+++ b/Contributors.html
@@ -315,7 +315,7 @@
       <a class="box-item" href="https://github.com/utsaverma2001-crypto"><span>Utsav Verma</span></a>
       <a class="box-item" href="https://github.com/whatharshcodes"><span>Harsh</span></a>
       <a class="box-item" href="https://github.com/thet3o"><span>Matteo Vacalebri</span></a>
-      <a class="box-item" href="https://github.com/arunim-iiitlCS"><span>Arunim Singhal</span></a>
+      <a class="box-item" href="https://github.com/Rohit-More"><span>Rohit More</span></a>
       <a class="box-item" href="https://github.com/ahad-abd"><span>Abdul Ahad</span></a>
       <a class="box-item" href="https://github.com/MFR414"><span>M Firmansyah Rifai</span></a>
       <a class="box-item" href="https://github.com/a-ayush19"><span>Ayush Awasthi</span></a>
