--- a/Contributors.html
+++ b/Contributors.html
@@ -441,6 +441,7 @@
       <a class="box-item" href="https://github.com/aakashjha017"><span>Aakash Jha</span></a>
       <a class="box-item" href="https://github.com/kapil706"><span>Kapil Chaudhary</span></a>
       <a class="box-item" href="https://github.com/glbdhananjaya"><span>Bhashitha Dhananjaya</span></a>
+      <a class="box-item" href="https://github.com/eby8zevin"><span>Ahmad Abu Hasan</span></a>
 
 
 
