--- a/Contributors.html
+++ b/Contributors.html
@@ -441,7 +441,7 @@
       <a class="box-item" href="https://github.com/aakashjha017"><span>Aakash Jha</span></a>
       <a class="box-item" href="https://github.com/kapil706"><span>Kapil Chaudhary</span></a>
       <a class="box-item" href="https://github.com/glbdhananjaya"><span>Bhashitha Dhananjaya</span></a>
-
+      <a class="box-item" href="https://github.com/vamisola"><span>Vina Compson</span></a>
 
 
       <!-- Please maintain the alignment... -->
