--- a/Contributors.html
+++ b/Contributors.html
@@ -442,7 +442,7 @@
       <a class="box-item" href="https://github.com/kapil706"><span>Kapil Chaudhary</span></a>
       <a class="box-item" href="https://github.com/glbdhananjaya"><span>Bhashitha Dhananjaya</span></a>
       <a class="box-item" href="https://github.com/sunankles"><span>Sunankles</span></a>
-
+      <a class="box-item" href="https://github.com/Ibb-uth"><span>Ibraheem Uthman</span></a>
 
       <!-- Please maintain the alignment... -->
 
