--- a/Contributors.html
+++ b/Contributors.html
@@ -442,6 +442,7 @@
       <a class="box-item" href="https://github.com/kapil706"><span>Kapil Chaudhary</span></a>
       <a class="box-item" href="https://github.com/glbdhananjaya"><span>Bhashitha Dhananjaya</span></a>
       <a class="box-item" href="https://github.com/sunankles"><span>Sunankles</span></a>
+      <a class="box-item" href="https://github.com/Taruna06"><span>Taruna Saini</span></a>
 
 
       <!-- Please maintain the alignment... -->
