--- a/Contributors.html
+++ b/Contributors.html
@@ -443,7 +443,7 @@
       <a class="box-item" href="https://github.com/glbdhananjaya"><span>Bhashitha Dhananjaya</span></a>
       <a class="box-item" href="https://github.com/sunankles"><span>Sunankles</span></a>
       <a class="box-item" href="https://github.com/Ibb-uth"><span>Ibraheem Uthman</span></a>
-
+      <a class="box-item" href="https://github.com/eshamittal"><span>Esha Mittal</span></a>
       <!-- Please maintain the alignment... -->
 
 
