--- a/Contributors.html
+++ b/Contributors.html
@@ -443,6 +443,8 @@
       <a class="box-item" href="https://github.com/glbdhananjaya"><span>Bhashitha Dhananjaya</span></a>
       <a class="box-item" href="https://github.com/sunankles"><span>Sunankles</span></a>
       <a class="box-item" href="https://github.com/Ibb-uth"><span>Ibraheem Uthman</span></a>
+      <a class="box-item" href="https://github.com/Lehnargh"><span>Andi L.</span></a>
+
 
       <!-- Please maintain the alignment... -->
 
