modified color and made it more responsive

--- a/Contributors.html
+++ b/Contributors.html
@@ -133,6 +133,7 @@
       <!-- Add to the bottom of the list -->
 
       <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
+      <a class="box-item" href="https://github.com/tushar-bht"><span>Tushar Bhatt</span></a>
       <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
       <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
       <a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
