update-contributors-list

--- a/Contributors.html
+++ b/Contributors.html
@@ -444,6 +444,7 @@
       <a class="box-item" href="https://github.com/sunankles"><span>Sunankles</span></a>
       <a class="box-item" href="https://github.com/Ibb-uth"><span>Ibraheem Uthman</span></a>
       <a class="box-item" href="https://github.com/dennisjonda"><span>Dennis Jonda</span></a>
+      <a class="box-item" href="https://github.com/Aakashmau"><span>Aakash Maurya</span></a>
 
       <!-- Please maintain the alignment... -->
 
