--- a/Contributors.html
+++ b/Contributors.html
@@ -451,6 +451,7 @@
       <a class="box-item" href="https://github.com/eshamittal"><span>Esha Mittal</span></a>
       <a class="box-item" href="https://github.com/Taruna06"><span>Taruna Saini</span></a>
       <a class="box-item" href="https://github.com/vamisola"><span>Vina Compson</span></a>
+      <a class="box-item" href="https://github.com/sonishsinghal"><span>Sonish Singhal</span></a>
       <a class="box-item" href="https://github.com/eby8zevin"><span>Ahmad Abu Hasan</span></a>
       <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
       <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
