--- a/Contributors.html
+++ b/Contributors.html
@@ -131,7 +131,7 @@
 
 
       <!-- Add to the bottom of the list -->
-
+      
       <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
       <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
       <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
@@ -463,7 +463,7 @@
       <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
       <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
       <a class="box-item" href="https://github.com/nipunsingal7"><span>Nipun Singal</span></a>
-
+      <a class="box-item" href="https://github.com/saanyaLall"><span>Saanya Lall</span></a>
 
 
 
@@ -579,6 +579,7 @@
     };
 
   </script>
+  
   <script src="/scripts/scroll.js"></script>
 
   <script src="./scripts/menu.js"></script>
