--- a/Contributors.html
+++ b/Contributors.html
@@ -463,7 +463,7 @@
       <a class="box-item" href="https://github.com/zedutra"><span>Jose Vitor Dutra</span></a>
       <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
       <a class="box-item" href="https://github.com/nipunsingal7"><span>Nipun Singal</span></a>
-
+      <a class="box-item" href="https://github.com/supriyagahoi"><span>Supriya gahoi</span></a>
 
 
 
