--- a/Contributors.html
+++ b/Contributors.html
@@ -464,6 +464,7 @@
       <a class="box-item" href="https://github.com/Meenu-github"><span>Meenu Singh</span></a>
       <a class="box-item" href="https://github.com/nipunsingal7"><span>Nipun Singal</span></a>
       <a class="box-item" href="https://github.com/computerwala"><span>Aman K Soni</span></a>
+      <a class="box-item" href="https://github.com/Ravikant-git"><span>Ravikant</span></a>
 
 
 
