--- a/Contributors.html
+++ b/Contributors.html
@@ -468,6 +468,7 @@
       <a class="box-item" href="https://github.com/saanyaLall"><span>Saanya Lall</span></a>
       <a class="box-item" href="https://github.com/shresritik"><span>Ritik Shrestha</span></a>
       <a class="box-item" href="https://github.com/Ravikant-git"><span>Ravikant</span></a>
+      <a class="box-item" href="https://github.com/manshadchangampalli"><span>Manshad</span></a>
 
 
 
