--- a/Contributors.html
+++ b/Contributors.html
@@ -465,6 +465,7 @@
       <a class="box-item" href="https://github.com/Ravikant-git"><span>Ravikant</span></a>
       <a class="box-item" href="https://github.com/manshadchangampalli"><span>Manshad</span></a>
       <a class="box-item" href="https://github.com/abhinnxo"><span>Abhinn Krishn</span></a>
+      <a class="box-item" href="https://github.com/DarkHunter1749"><span>Manoj Sadanala</span></a>
 
 
 
