Center the Text From the Footer Which is now looks Clean And Added My Profile

--- a/Contributors.html
+++ b/Contributors.html
@@ -465,6 +465,7 @@
       <a class="box-item" href="https://github.com/Ravikant-git"><span>Ravikant</span></a>
       <a class="box-item" href="https://github.com/manshadchangampalli"><span>Manshad</span></a>
       <a class="box-item" href="https://github.com/abhinnxo"><span>Abhinn Krishn</span></a>
+      <a class="box-item" href="https://github.com/Vikrant804"><span>Vikrant Kamble</span></a>
 
 
 
@@ -490,7 +491,7 @@
       </g>
     </svg>
   </button>
-  <footer class="footer mt-auto py-3 bg-light">
+  <footer class="footer mt-auto py-3 bg-light text-center">
     <div class="container">
       <span class="text-muted">This Project is participating in Hacktoberfest.</span>
     </div>
