--- a/Contributors.html
+++ b/Contributors.html
@@ -322,6 +322,7 @@
       <a class="box-item" href="https://github.com/highflyer910"><span>Thea M.</span></a>
       <a class="box-item" href="https://github.com/alfaniM"><span>M. Aulia Alfani</span></a>
       <a class="box-item" href="https://github.com/soumyajit1999"><span>Soumyajit Sen</span></a>
+      <a class="box-item" href="https://github.com/i-am-chirantan"><span>Chirantan Acharyya</span></a>
       <a class="box-item" href="https://github.com/vishnuramv"><span>Vishnu Ram V</span></a>
       <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
       <a class="box-item" href="https://github.com/SayantanMaiti"><span>Sayantan Maiti</span></a>
