--- a/Contributors.html
+++ b/Contributors.html
@@ -466,6 +466,7 @@
       <a class="box-item" href="https://github.com/manshadchangampalli"><span>Manshad</span></a>
       <a class="box-item" href="https://github.com/abhinnxo"><span>Abhinn Krishn</span></a>
       <a class="box-item" href="https://github.com/Tharunkumar001"><span>Tharun Kumar</span></a>
+       <a class="box-item" href="https://github.com/Ishitav03"><span>Ishita Verma</span></a>
 
 
 
