updated_Contributors.html

--- a/Contributors.html
+++ b/Contributors.html
@@ -141,6 +141,7 @@
       <a class="box-item" href="https://github.com/ritesh2905"><span>Ritesh Kumar</span></a>
       <a class="box-item" href="https://github.com/xevenheaven"><span>Elysia Ong</span></a>
       <a class="box-item" href="https://github.com/facundof13"><span>Facundo</span></a>
+      <a class="box-item" href="https://github.com/amul-code"><span>Amul Rathore</span></a>
       <a class="box-item" href="https://github.com/Hrishabh5"><span>Hrishabh Jain</span></a>
       <a class="box-item" href="https://github.com/skully-coder"><span>Abhinav Agarwal</span></a>
       <a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
