--- a/Contributors.html
+++ b/Contributors.html
@@ -473,6 +473,7 @@
       <a class="box-item" href="https://github.com/Vikrant804"><span>Vikrant Kamble</span></a>
       <a class="box-item" href="https://github.com/asquaree"><span>Aakash Aggarwal</span></a>
       <a class="box-item" href="https://github.com/shweta-tripathe"><span>shweta tripathi</span></a>
+      <a class="box-item" href="https://github.com/lkalves"><span>Lucas Alves</span></a>
       <a class="box-item" href="https://github.com/santiago1617"><span>Santiago Tumbaco</span></a>
 
 
