--- a/Contributors.html
+++ b/Contributors.html
@@ -322,6 +322,7 @@
       <a class="box-item" href="https://github.com/highflyer910"><span>Thea M.</span></a>
       <a class="box-item" href="https://github.com/alfaniM"><span>M. Aulia Alfani</span></a>
       <a class="box-item" href="https://github.com/soumyajit1999"><span>Soumyajit Sen</span></a>
+      <a class="box-item" href="https://github.com/i-am-chirantan"><span>Chirantan Acharyya</span></a>
       <a class="box-item" href="https://github.com/vishnuramv"><span>Vishnu Ram V</span></a>
       <a class="box-item" href="https://github.com/khushi-mishra0408"><span>Khushi Mishra</span></a>
       <a class="box-item" href="https://github.com/SayantanMaiti"><span>Sayantan Maiti</span></a>
@@ -470,8 +471,10 @@
       <a class="box-item" href="https://github.com/DarkHunter1749"><span>Manoj Sadanala</span></a>
       <a class="box-item" href="https://github.com/rocksaini"><span>Deepak Saini</span></a>
       <a class="box-item" href="https://github.com/Vikrant804"><span>Vikrant Kamble</span></a>
-
-
+      <a class="box-item" href="https://github.com/asquaree"><span>Aakash Aggarwal</span></a>
+      <a class="box-item" href="https://github.com/shweta-tripathe"><span>shweta tripathi</span></a>
+      <a class="box-item" href="https://github.com/santiago1617"><span>Santiago Tumbaco</span></a>
+      <a class="box-item" href="https://github.com/alirazamumtaz"><span>AliRazaMumtaz</span></a>
 
 
 
