--- a/Contributors.html
+++ b/Contributors.html
@@ -144,6 +144,7 @@
       <a class="box-item" href="https://github.com/Hrishabh5"><span>Hrishabh Jain</span></a>
       <a class="box-item" href="https://github.com/skully-coder"><span>Abhinav Agarwal</span></a>
       <a class="box-item" href="https://github.com/sharron4me"><span>Mohammad Ummair</span></a>
+      <a class="box-item" href="https://github.com/muzhar01"><span>Muzhar Hussain</span></a>
       <a class="box-item" href="https://github.com/dwiguna81"><span>Dwi Guna</span></a>
       <a class="box-item" href="https://github.com/alok2947"><span>Alok Kumar Jha</span></a>
       <a class="box-item" href="https://github.com/Samarth-Khatri"><span>Samarth Khatri</span></a>
