--- a/Contributors.html
+++ b/Contributors.html
@@ -474,7 +474,11 @@
       <a class="box-item" href="https://github.com/asquaree"><span>Aakash Aggarwal</span></a>
       <a class="box-item" href="https://github.com/shweta-tripathe"><span>shweta tripathi</span></a>
       <a class="box-item" href="https://github.com/santiago1617"><span>Santiago Tumbaco</span></a>
+<a class="box-item" href="https://github.com/santiago1617"><span>Santiago Tumbaco</span></a>
 
+
+
+<a class="box-item" href="https://github.com/manish-ai"><span>Manish N</span></a>
 
 
 
