--- a/Contributors.html
+++ b/Contributors.html
@@ -476,7 +476,7 @@
       <a class="box-item" href="https://github.com/santiago1617"><span>Santiago Tumbaco</span></a>
       <a class="box-item" href="https://github.com/Memphis1983"><span> Kiran Iyer</span></a>
       <a class="box-item" href="https://github.com/sadeghhosseiny"><span>Sadegh Hosseini</span></a>
-
+      <a class="box-item" href="https://github.com/thepratikgyawali"><span> Pratik Gyawali</span></a>
 
 
 
