added my name in contributors.html

--- a/Contributors.html
+++ b/Contributors.html
@@ -478,7 +478,7 @@
       <a class="box-item" href="https://github.com/Memphis1983"><span> Kiran Iyer</span></a>
       <a class="box-item" href="https://github.com/sadeghhosseiny"><span>Sadegh Hosseini</span></a>
       <a class="box-item" href="https://github.com/thepratikgyawali"><span> Pratik Gyawali</span></a>
-
+      <a class="box-item" href="https://github.com/AdityaMore7000"><span>Aditya More</span></a>
 
 
 
