--- a/Contributors.html
+++ b/Contributors.html
@@ -135,6 +135,7 @@
       <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
       <a class="box-item" href="https://github.com/ameybawane"><span>Amey Bawane</span></a>
       <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
+      <a class="box-item" href="https://github.com/H9660"><span>Hussain Lohawala</span></a>
       <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
       <a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
       <a class="box-item" href="https://github.com/shradha-khapra"><span>Shradha Khapra</span></a>
