--- a/Contributors.html
+++ b/Contributors.html
@@ -480,6 +480,7 @@
       <a class="box-item" href="https://github.com/thepratikgyawali"><span> Pratik Gyawali</span></a>
       <a class="box-item" href="https://github.com/AdityaMore7000"><span>Aditya More</span></a>
       <a class="box-item" href="https://github.com/kishanrajput23"><span>Kishan Kumar Rai</span></a>
+      <a class="box-item" href="https://github.com/srinjoy-26"><span>Srinjoy Pati</span></a>
 
 
       <!-- Please maintain the alignment... -->
