add some style and html

--- a/Contributors.html
+++ b/Contributors.html
@@ -1874,7 +1874,12 @@
           "id": 345,
           "fullname": "Ankur Singh",
           "username": "https://github.com/progressive-coder-ankur"
-      }
+      },
+      {
+          "id": 346,
+          "fullname": "Ankush jagga",
+          "username": "https://github.com/AnkushJagga"
+      },
 ];
 
 
