--- a/Contributors.html
+++ b/Contributors.html
@@ -3,11 +3,7 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <link rel="icon" href="https://hacktoberfestswaglist.com/img/Hacktoberfest_21.jpg" type="image/x-icon">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-74296045-6"></script>
 
-  <!--Stats Script-->
-  <script src="scripts/stats.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -26,11 +22,10 @@
   <meta name="description"
     content="This is a static website serving as a beginner friendly project to help developers get started with hacktoberfest -Gateway to open source.">
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  
   <!-- Font Style from google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,10 +41,12 @@
   <link rel="stylesheet" href="./css/footer.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-  <link rel="stylesheet" href="css/explosion.css">
-  <link rel="stylesheet" href="./css/terminal.css">
+  <!-- <link rel="stylesheet" href="css/explosion.css"> -->
+  <!-- <link rel="stylesheet" href="./css/terminal.css"> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <script src="https://kit.fontawesome.com/d9f7ec7b29.js" crossorigin="anonymous"></script>
+  <!-- Place this tag in your head or just before your close body tag. -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
   <title>Hacktoberfest 2022 - Contributors</title>
 
 
@@ -61,7 +58,6 @@
 
 
   <!-- Back-to-top Button -->
-  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-angle-double-up"></i></button>
   <button id="back-to-top-btn"><i class="fas fa-angle-double-up"></i></button>
 
 
@@ -111,20 +107,21 @@
         </div>
       </div>
       <div class="d-flex justify-content-between align-items-center">
-        <p class=" rubberBand delay-4s">Add yourself to the list if you contribute.</p>
+        <p class="rubberBand delay-4s">Add yourself to the list if you contribute.</p>
         <div class="inputs mr-3">
             <i class="fa fa-search"></i>
             <input type="text" id="search" class="form-control " placeholder="Search Contributors..">
         </div>
       </div>
+      <div>
+    <a class="github-button" href="https://github.com/fineanmol/Hacktoberfest2022" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star fineanmol/Hacktoberfest2022 on GitHub">To Get "HacktoberFest-Accepted" label, Star ✩ the repo </a>
+      </div>
       <hr style="width:80%">
     </div>
-    <div class="box mx-auto justify-content-center" id="contributors">
+    <div class="box mx-auto justify-content-center" id="contributors">    
 
       <!-- Add to the bottom of the list -->
 
-
-      <!-- Please maintain the alignment... -->
 
     </div>
   </div>
@@ -145,6 +142,7 @@
     <div class="container">
       <span class="text-muted">This Project is participating in Hacktoberfest.</span>
     </div>
+    <div>Made with ❤️ by <a href="https://twitter.com/fineanmol">Anmol Agarwal</a>.  © Copyright 2022 </div>
   </footer>
 
   <script>
@@ -1884,7 +1882,10 @@
     let sortedContributors = contributors.sort((a, b) => {
       let textA = a.fullname.trim().toUpperCase();
       let textB = b.fullname.trim().toUpperCase();
-      return textA.localeCompare(textB)
+      console.log('[contributors]',textA,textB)
+      //#Use this localeCompare if you want show names in a sorted orders
+    //   return textA.localeCompare(textB)  
+    return textA
     });
 
     searchbox.addEventListener('keyup', async (e) => {
@@ -2009,7 +2010,6 @@
 
   </script>
 
-  <script src="/scripts/scroll.js"></script>
 
   <script src="./scripts/menu.js"></script>
   <div class="container">
@@ -2032,9 +2032,9 @@
 
     function scrollFunction() {
       if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-        mybutton.style.display = "block";
+        // mybutton.style.display = "block";
       } else {
-        mybutton.style.display = "none";
+        // mybutton.style.display = "none";
       }
     }
 
